Update the reasons and alternatives

--- a/100alternatives.html
+++ b/100alternatives.html
@@ -64,10 +64,27 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">3. Coming Soon!  Check back on the 20th!</h3>
+        <h3 style="font-weight: bold">3. Create a Mario Cuomo bike and walking path on the Tappan Zee Bridge</h3>
+        <p>The bridge has two spans, and plenty of room to create a beautiful walking and bike path in Mario Cuomo's name.  This way, we can honor Gov. Cuomo without destroying our history.</p>
+        <h4>Mr. Cuomo, your father would far prefer something like this named after him.  It's something that rich and poor can use, for those with cards, and also for those without cars.  This is the type of honor your father deserves: one that lifts up his name, not one that tarnishes both his and yours.</h4>
       </div>
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">4. Coming Soon!  Check back on the 20th!</h3>
+        <h3 style="font-weight: bold">4. Call it the Cuomo-Wilson Tappan Zee Bridge</h3>
+        <p>Why should one person's name be removed in favor of another?  That makes no sense.</p>
+        <h4>Mr. Cuomo, your father put Governor Wilson's name on the bridge for a reason.  And he had the good sense not to remove the Tappan Zee name in so doing.  Why don't you follow in your father's footsteps and make a decision the preserves history, instead of the one you made that destroys it?</h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">5. Coming soon!</h3>
+        <p>Check back in early February</p>
+        <h4>Mr. Cuomo, we have many more reasonable and logical alternatives to present to you.  Check back soon for more ideas!</h4>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">6. Coming soon!</h3>
+        <p>Check back in early February</p>
+        <h4>Mr. Cuomo, we have many more reasonable and logical alternatives to present to you.  Check back soon for more ideas!</h4>
       </div>
     </div>
 
