--- a/100reasons.html
+++ b/100reasons.html
@@ -67,10 +67,27 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">3. Coming Soon!  Check back on the 20th!</h3>
+        <h3 style="font-weight: bold">3. Public infrastructure is public.</h3>
+        <p>No politician owns public infrastructure.  And no politician is so important to our nation that our public infrastructure should be partisanly named after any one person who is (by the nature of a democracy) not 'unanimously loved' by the taxpaying and voting public.</p>
+        <h4>Andrew Cuomo, we know you think highly of your father.  And that many New Yorkers do too.  But you represent the people of New York, and our collective histoyr is more important than your selfish desire for posterity--of you OR your father.  Please do the right thing and return our bridge's name.</h4>
       </div>
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">4. Coming Soon!  Check back on the 20th!</h3>
+        <h3 style="font-weight: bold">4. According to William O'Shaughnessy in his book, "Mario Cuomo",</h3>
+        <p>Andrew Cuomo often fondle recalls his father saying, "New York was a beacon for the nation."</p>
+        <h4>If so, then why don't you, Mr. Cuomo, act like New York is indeed a beacon for the nation.  Should all bridge's that need to be replaced lose their original names?  Should all public infrastructure be renamed after politician's fathers just because they have the power to do so?  Your father would be quite ashamed of you for what you have done to NY history.  Oh, and don't for a moment think this is partisan.</h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">5. Coming Soon!  Check back on the 20th!</h3>
+        <p></p>
+        <h4></h4>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">6. Coming Soon!  Check back on the 20th!</h3>
+        <p></p>
+        <h4></h4>
       </div>
     </div>
 
