--- a/100reasons.html
+++ b/100reasons.html
@@ -73,7 +73,7 @@
       </div>
       <div class="col-xs-12 col-md-6">
         <h3 style="font-weight: bold">4. According to William O'Shaughnessy in his book, "Mario Cuomo",</h3>
-        <p>Andrew Cuomo often fondle recalls his father saying, "New York was a beacon for the nation."</p>
+        <p>Andrew Cuomo often fondly recalls his father saying, "New York was a beacon for the nation."</p>
         <h4>If so, then why don't you, Mr. Cuomo, act like New York is indeed a beacon for the nation.  Should all bridge's that need to be replaced lose their original names?  Should all public infrastructure be renamed after politician's fathers just because they have the power to do so?  Your father would be quite ashamed of you for what you have done to NY history.  Oh, and don't for a moment think this is partisan.</h4>
       </div>
     </div>
