--- a/100reasons.html
+++ b/100reasons.html
@@ -80,12 +80,12 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">5. Coming Soon!  Check back on the 20th!</h3>
+        <h3 style="font-weight: bold">5. Coming Soon!  Check back in February!</h3>
         <p></p>
         <h4></h4>
       </div>
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">6. Coming Soon!  Check back on the 20th!</h3>
+        <h3 style="font-weight: bold">6. Coming Soon!  Check back in February!</h3>
         <p></p>
         <h4></h4>
       </div>
