--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="col-md-6 col-xs-12">
         <h3 class="text-center">While You're Here:</h3>
         <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign the petition!</a></p>
-        <p class="text-center main-links">2. <a href="contribute.html">Donate!</a>or <a href="/store">Buy Stuff.</a></p>
+        <p class="text-center main-links">2. <a href="contribute.html">Donate!</a> or <a href="/store">Buy SOTZ Stuff!</a></p>
         <p class="text-center main-links">3. <a href="http://eepurl.com/diOTQ5" target="_blank">Join our email list. Stay informed.</a></p>
         <p class="text-center main-links">4. <a href="https://join.slack.com/t/saveourtappanzee/shared_invite/enQtMzA1NzQxODIzNTkwLTdhOGM3Yzc5NmRlODNiMTBlNjk1MDE4MmRlYjA0MTg2MjQ2YTI0MjkxMjZkNTk3NWRmMGI0ZTk3ZDk1YWZlM2E">Join our FREE online community!</a></p>
         <p class="text-center main-links">5. <a href="https://twitter.com/SaveOurTappanZ" target="_blank">Follow us on Twitter!</a></p>
