Update Board Info

--- a/board.html
+++ b/board.html
@@ -42,49 +42,7 @@
 
       <div id="management" class="well">
 
-        <h4><strong>Alan I. Zelazo - President</strong></h4>
-        <div class="row">
-          <h4></h4>
-          <div class="col-xs-12 col-md-3">
-            <img src="images/alan.jpg" class="img-responsive" alt="photo of Alan Zelazo" style="max-height: 200px; max-width: 200px; text-align: center">
-          </div>
-
-          <div class="col-xs-12 col-md-9">
-            <p>
-             Alan recently retired after working 40 years on the railroad as a train Engineer for PATH since 1992.  Prior to that, Al was a Towerman for Amtrak.  He enjoys being an active member at The Shore Line Trolley Museum, a 501(c)(3) in East Haven, Connecticut, engaging in the restoration & preservation of vintage trolley & rapid transit cars.  He is proud to serve as Vice Chairman on the Museum's Board of Trustees.  Al is also the curator of the Hudson & Manhattan Car 503's restoration project, to bring this vintage train car back to its former glory.  He is married to his wife Dolores of nearly 40 years and is the father to 2 children, Jonathan & Stephanie.  He firmly believes in preserving our history for future generations which is why he wanted to become involved in this endeavor to preserve the Tappan Zee Bridge name for future generations.
-            </p>
-          </div>
-        </div>
-
-
-        <h4><strong>Annette Brooks - Vice President</strong></h4>
-        <div class="row">
-          <h4></h4>
-          <div class="col-xs-12 col-md-3">
-            <img src="images/Annette.jpg" class="img-responsive" alt="photo of Annette Brooks" style="max-height: 200px; max-width: 200px; text-align: center">
-          </div>
-
-          <div class="col-xs-12 col-md-9">
-            <p>
-              Growing up in a small Midwestern town along the Mississippi River ignited Annette’s lifelong love for bridges, rivers, waterway commerce, and recreation. It also influenced her appreciation for a rich river history intertwined with that the of early settlers and Native Americans. Along with the belief that the Tappan Zee history should be preserved, her childhood memories of life along a mighty river and the old bridge that spanned it, fuel her passion to help Save Our Tappan Zee. After earning undergraduate degrees from the University of Iowa and while enrolled in the MBA program at Portland State University in Portland, Oregon, Annette began to carve out a career in telecommunications. She went on to hold various executive positions, including Vice President, Switched Services Line of Business at Teleport Communications Group in New York and Vice President, Advanced Intelligent Networks at Nortel Networks in Richardson, Texas. Before she retired from the corporate world, Annette was Marketing Vice President/Chief Marketing Officer for venture-backed ($20-$30 million tranche) wireless portfolio companies, where she oversaw branding, product marketing, marketing communications, market analysis, and more.  Throughout her life, Annette has been involved in various charities and nonprofit organizations. She was on the Plano Children’s Theatre Board of Directors when she lived in Dallas, and most recently, was a volunteer for the Wounded Warrior Project.  Today, Annette, keeps busy as a successful freelance writer and marketer specializing in digital content, editorials, advertorials and social media marketing. She has called the greater New York/New Jersey metro area her permanent home since 2008, is married, and enjoys traveling the world and writing about her sojourns.</p>
-          </div>
-        </div>
-
-        <h4><strong>Dr. Dena Restaino, PT, DPT - Secretary</strong></h4>
-        <div class="row">
-          <h4></h4>
-          <div class="col-xs-12 col-md-3">
-            <img src="images/dena.jpg" class="img-responsive" alt="photo of Dena Restaino" style="max-height: 200px; max-width: 200px; text-align: center">
-          </div>
-
-          <div class="col-xs-12 col-md-9">
-            <p>
-              Dena is a lifelong resident of Westchester County for over 48 years, educated at Valhalla High, and then University of Miami, where she earned her BS as well as Master of Science in Physical Therapy.  She then attended Des Moines Osteopathic School, where she became a Doctor of Physical Therapy, graduating with Honors and Distinction. She is a member of the Medical Honor Society since 2008. Past long-time employers include Burke Rehabilitation Hospital and St. Joseph's Medical Center.  Today, she is self-employed at Kinetic Solutions.  She takes great pride in treating any military veteran for free, encouraging any vet to contact her with any physical therapy issue he or she may have. 
-            </p>
-          </div>
-        </div>
-
-        <h4><strong>James Dorato, MBA - Treasurer</strong></h4>
+        <h4><strong>James Dorato, MBA - President & Treasurer</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
@@ -92,34 +50,34 @@
           </div>
 
           <div class="col-xs-12 col-md-9">
-            <p>Jimmy grew up in the Albany area, but his adventures in undergrad and business school took him to NYC on a regular basis, and each time, he'd drive over the Tappan Zee Bridge. Jimmy is passionate about business, and is currently working in that field, but he is now even more passionate about preserving history for future generations.  He believes that it is imperative that we know about the people that came before us, recognizing the shoulders on whom we now stand, and learning about the world in which we grew up through the living history that still stands before us.  In his free time, Jimmy enjoys traveling, scuba diving, and golfing... and snowboarding when it gets too cold to be out on the course!
+            <p>Jimmy grew up in the Albany area, but his adventures in undergrad and business school took him to NYC on a regular basis, and each time, he'd drive over the Tappan Zee Bridge. Jimmy is passionate about business, and is currently working in that field, but he is now also passionate about preserving history for future generations.  He believes that it is imperative that we know about the people that came before us, recognizing the shoulders on whom we now stand, and learning about the world in which we grew up through the living history that still stands before us.  In his free time, Jimmy enjoys traveling, scuba diving, and golfing... and snowboarding when it gets too cold to be out on the course!
             </p>
           </div>
         </div>
 
-        <h4><strong>Raymond Ferrara - Board Member</strong></h4>
+        <h4><strong>Cherish Pratt - Vice President</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/ray.jpg" class="img-responsive" alt="photo of Raymond Ferrara" style="max-height: 200px; max-width: 200px; text-align: center">
-          </div>
-
-          <div class="col-xs-12 col-md-9">
-            <p>Ray, married since 1969 to his wife Connie, as well as father and grandfather, attended high school in Elmsford, and graduated with a BBA from Pace College in 1968.  He served his country with pride in the US Air Force from 1969-1971, achieving the rank of Sergeant.  After starting a career with Chicago-based Vogue Tyre & Rubber Co in 1972 as a salesman, after 44 years, he retired as the Northeast Regional Vice President. Vogue Tyre was established in 1914 providing premium products to the automobile dealers as well as to the public. In 1974, Ray moved from salesman to sales manager; in 1976 he became General Manager; and in 1993, he was promoted to Vice President. He grew the company immensely by introducing innovative new procedures, by setting up satellite locales in the NY/NJ metro area, by negotiating 3 union contracts with the UAW, and for locating real estate for two 40,000 sq. ft. locations handling all renovations with the builders.  Ray also has extensive board experience, as he currently serves on the board of the Westchester Seniors Golf Association which provides scholarships to caddies in the Westchester area.
-            </p>
-          </div>
-        </div>
-
-        <h4><strong>Jeff Christian - Board Member</strong></h4>
-        <div class="row">
-          <h4></h4>
-          <div class="col-xs-12 col-md-3">
-            <img src="images/Jeff.jpg" class="img-responsive" alt="photo of Jeff Christian" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/Cherish.jpg" class="img-responsive" alt="photo of Cherish Pratt" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
             <p>
-              Jeff is a husband, father of two and Rockland County native with a long family history in the Hudson Valley. He graduated Nyack High School, received a BSA from Pace University and Master of Industrial Design from Pratt Institute. He has designed many recognizable and award winning products in transportation and consumer products for clients such as John Deere, Steelcase and Human scale. 
+              Cherish was raised in Rockland County, NY, where her formerly German, French and Scottish immigrant ancestors settled several generations ago.  Her great-grandfather, former Superintendant of Schools, drove across the Hudson River in his early model Ford when the river froze and there was no Tappan Zee built.  Dr. Hopf made it safely across and since then, the Hudson River and the Tappan Zee Bridge that spans it, existed as part of the family lore.  Educated in Germany, Japan and Honolulu, Cherish returned to Rockland from Hawaii to raise a family.  She is grateful for her worldly education and feels fortunate to speak three languages and to have lived, studied and worked on several continents.  Cherish has lived in several cities in Japan, having studied then worked as an English language teacher for Princeton University. She became a scholar of Japanese religion at the University of Hawaii, Manoa, and was granted an audience with the Emperor Akihito and Empress Michiko of Japan, to present her work on Japanese weddings.  Back in the United States, her expertise in educational administration and marketing is notable, having worked for some of the top advisory and research organizations, private schools and law schools in the region.  She is a published writer, speechwriter and is currently working on a screenplay and a book.  Cherish is the proud mother of two children who attend Rockland county schools.</p>
+          </div>
+        </div>
+
+        <h4><strong>Board Vacancy - Come Join Us.</strong></h4>
+        <div class="row">
+          <h4></h4>
+          <div class="col-xs-12 col-md-3">
+            <img src="images/default.jpg" class="img-responsive" alt="photo of board member" style="max-height: 200px; max-width: 200px; text-align: center">
+          </div>
+
+          <div class="col-xs-12 col-md-9">
+            <p>
+              Your bio here.
             </p>
           </div>
         </div>
