--- a/board.html
+++ b/board.html
@@ -59,7 +59,7 @@
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/Cherish.jpg" class="img-responsive" alt="photo of Cherish Pratt" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/cherish.jpg" class="img-responsive" alt="photo of Cherish Pratt" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
