--- a/board.html
+++ b/board.html
@@ -55,7 +55,7 @@
           </div>
         </div>
 
-        <h4><strong>Cherish Pratt - Vice President</strong></h4>
+        <h4><strong>Cherish Pratt, M.A. - Vice President</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
