Added new board member CHristopher

--- a/board.html
+++ b/board.html
@@ -68,16 +68,16 @@
           </div>
         </div>
 
-        <h4><strong>Board Vacancy - Come Join Us.</strong></h4>
+        <h4><strong>Christopher McCormick, B.F.A.</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
-            <img src="images/default.jpg" class="img-responsive" alt="photo of board member" style="max-height: 200px; max-width: 200px; text-align: center">
+            <img src="images/christopher.jpg" class="img-responsive" alt="photo of Christopher McCormick" style="max-height: 200px; max-width: 200px; text-align: center">
           </div>
 
           <div class="col-xs-12 col-md-9">
             <p>
-              Your bio here.
+              Christopher grew up in North Salem in Westchester County.  Educated at Rochester Institute of Technology with a BFA in Industrial Design, he is a creative, insightful problem solver, and a passionate family man. Today, using his creativity to solve problems and seeing the tangible results of his efforts is what he most enjoys. His design experience is eclectic, to include business entrepreneur and owner, working in the special effects industry for movies and television in Hollywood, working on major holiday window displays in NYC (as well as other cities), various graphic design projects, building residential homes, managing construction projects, consulting on capital projects, operating heavy equipment, and working as a highly skilled carpenter and master high end custom concrete fabricator. He has traveled to Europe and Asia for both business and pleasure and has lived/worked in CA, FL, CT, and NY. Besides his perpetual appetite for all things creative and design, Christopher enjoys time with his wife and son, exploring/hiking the local areas, sports, and motorcycle riding.  He also has an avid interest in history, especially the extremely ancient history of our planet (think: megalithic structures).
             </p>
           </div>
         </div>
