--- a/board.html
+++ b/board.html
@@ -42,7 +42,7 @@
 
       <div id="management" class="well">
 
-        <h4><strong>James Dorato, MBA - President & Treasurer</strong></h4>
+        <h4><strong>James Dorato, M.B.A. - President & Treasurer</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
