--- a/board.html
+++ b/board.html
@@ -68,7 +68,7 @@
           </div>
         </div>
 
-        <h4><strong>Christopher McCormick, B.F.A.</strong></h4>
+        <h4><strong>Christopher McCormick, B.F.A. - Secretary</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
