updated store legalise

--- a/store.html
+++ b/store.html
@@ -51,7 +51,7 @@
         <p>The Small SOTZ Box includes: 2 car magnets, 4 bumper stickers, 5 pens, and 1 hand sanitzer that you can use to spread the word.</p>
         <p>The Medium SOTZ Box includes: 4 car magnets, 6 bumper stickers, 10 pens, 2 hand sanitizers, 1 small poster, and 1 lawn sign that you can use to spread the word.</p>
         <p>The Large SOTZ Box includes: 6 car magnets, 8 bumper stickers, 15 pens, 4 hand sanitizers, 2 lawn signs, 1 small poster, and 1 large poster.  In other words, a whole bunch of cool stuff in large quantities than the smaller boxes, so you can REALLY spread the word.</p>
-        <p>NOTE: Prices above and contents may change sporadically.  Please give us 1 - 2 weeks for shipments.  Sometimes we run out of stock.  If we believe the wait time will be too great, based on current inventory, in such a situation we reserve the right to provide items to you of equal or greater value.  And don't be surprised: the box is actually an envelope, since it's less expensive. :D</p>        
+        <p>LEGAL NOTE: Prices above and contents may change sporadically.  Please give us 1 - 2 weeks for shipments.  Sometimes we run out of stock.  If we believe the wait time will be too great, based on current inventory, in such a situation we reserve the right to provide items to you of equal or greater value.  As of 2/9/18, we are still in process of ordering the posters, and the lawn signs are still en route.  Finally, don't be surprised: the box is actually an envelope, since it's less expensive. :D</p>        
         
         <div class="text-center">
           <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
