Added logo to navbar

--- a/store.html
+++ b/store.html
@@ -94,7 +94,7 @@
 
       <div class="row">
         <div class="col-xs-3 col-xs-12">
-          <p>Our Sweatshirts (Coming Soon) With Also Have Our New Logo</p>
+          <p>Our Sweatshirts (Coming Soon) Will Have Our New Logo On Them</p>
           <img src="images/sotzlogo.jpg" class="img-responsive" alt="photo of logo" style="max-height: 200px; max-width: 200px; text-align: center">
         </div>
         <div class="col-xs-3 col-xs-12">
