--- a/navigation.html
+++ b/navigation.html
@@ -14,7 +14,7 @@
         </button>
 
         <a class="navbar-brand" href="index.html">
-          SOTZ
+          <img src="images/sotzlogo.jpg" class="img-responsive" alt="photo of logo" style="max-height: 30px; max-width: 100px; text-align: center">
         </a>
       </div>
 
@@ -27,7 +27,7 @@
 
         <ul class="nav navbar-nav navbar-right">
                     
-          <li><a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign the Petition</a></li>
+          <li><a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign Petition</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="media.html">Media</a></li>
           <li><a href="100reasons.html">100 Rs</a></li>
