Fixed store bootstrap for photos

--- a/store.html
+++ b/store.html
@@ -74,38 +74,38 @@
     
     <h2 class="big-text">What the stuff looks like!</h2>
       <div class="row">
-        <div class="col-xs-3 col-xs-12">
+        <div class="col-md-3 col-xs-12">
           <p>Small and Large Poster</p>
           <img src="images/sotzposter.jpg" class="img-responsive" alt="photo of Poster" style="max-height: 200px; max-width: 200px; text-align: center">
         </div>
-        <div class="col-xs-3 col-xs-12">
+        <div class="col-md-3 col-xs-12">
           <p>Car Magnet & Sticker.  Same Design and Dimensions.</p>
           <img src="images/sotzmagnetoncarcloseup.jpg" class="img-responsive" alt="photo of magnet" style="max-height: 200px; max-width: 200px; text-align: center">
         </div>
-        <div class="col-xs-3 col-xs-12">
+        <div class="col-md-3 col-xs-12">
           <p>Pens "Keep Your Hands Off Our Spans - Help Preserve NY History"
           <img src="images/sotzpens.jpg" class="img-responsive" alt="photo of pens" style="max-height: 200px; max-width: 200px; text-align: center">
         </div>
-        <div class="col-xs-3 col-xs-12">
+        <div class="col-md-3 col-xs-12">
           <p>Lawn Sign - Doublesided - Includes Poles To Put On Lawn</p>
           <img src="images/lawnsign.png" class="img-responsive" alt="photo of lawn sign" style="max-height: 200px; max-width: 200px; text-align: center">
         </div>
       </div>
 
       <div class="row">
-        <div class="col-xs-3 col-xs-12">
+        <div class="col-md-3 col-xs-12">
           <p>Our Sweatshirts (Coming Soon) Will Have Our New Logo On Them</p>
           <img src="images/sotzlogo.jpg" class="img-responsive" alt="photo of logo" style="max-height: 200px; max-width: 200px; text-align: center">
         </div>
-        <div class="col-xs-3 col-xs-12">
+        <div class="col-md-3 col-xs-12">
           <p>WideShot of Car Magnet</p>
           <img src="images/sotzmagnetoncarwideshot.jpg" class="img-responsive" alt="photo of magnet" style="max-height: 200px; max-width: 200px; text-align: center">
         </div>
-        <div class="col-xs-3 col-xs-12">
+        <div class="col-md-3 col-xs-12">
           <p>Hand Sanitizer "Keep Your Hands Off Our Spans"  HUGE bottle.
           <img src="images/hand.jpg" class="img-responsive" alt="photo of hand sanitizer" style="max-height: 200px; max-width: 200px; text-align: center">
         </div>
-        <div class="col-xs-3 col-xs-12">
+        <div class="col-md-3 col-xs-12">
           <p>More Coming Soon</p>
           <img src="" class="img-responsive" alt="" style="max-height: 200px; max-width: 200px; text-align: center">
         </div>
