--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-4">
         <h4 class="text-center">SIGNATURE COUNT:
-          <p style="color: red">106,070 Supporters since 11/3/17<br>
+          <p style="color: red">106,579 Supporters since 11/3/17<br>
             <span style="color: black">who want their bridge back</span>
           </p>
         </h4>
@@ -56,15 +56,15 @@
 
       <div class="col-xs-12 col-md-4">
         <h4 class="text-center">GOFUNDME.COM:   
-          <p style="color: red">$9,518 of $100,000 since 12/2/17<br>
-            <span style="color: black">from 334 Friends of the Tappan Zee</span>
+          <p style="color: red">$9,838 of $100,000 since 12/2/17<br>
+            <span style="color: black">from 341 Friends of the Tappan Zee</span>
           </p> 
         </h4>
       </div>
       <div class="col-xs-12 col-md-4">
         <h4 class="text-center">CHANGE.ORG:  
-          <p style="color: red">$335 of $50,000 since 1/1/18<br>
-            <span style="color: black">from 15 Friends of the Tappan Zee</span>
+          <p style="color: red">$440 of $50,000 since 1/1/18<br>
+            <span style="color: black">from 20 Friends of the Tappan Zee</span>
           </p>
         </h4>
       </div>
@@ -76,7 +76,7 @@
     
     <div class="row">
       <div class="col-md-6 col-xs-12 text-center">
-        <img class="text-center img-responsive" src="images/tappan-zee-night.jpg" alt="Photo of Tappan Zee Bridge">
+        <img class="text-center img-responsive" src="images/sotzlogo.jpg" alt="Photo of SOTZ logo">
       </div>
       <div class="col-md-6 col-xs-12">
         <h3 class="text-center">While You're Here:</h3>
