--- a/store.html
+++ b/store.html
@@ -99,7 +99,7 @@
       <div class="row">
         <div class="col-md-3 col-xs-12">
           <p>Our Sweatshirts (Coming Soon) Will Have Our New Logo On Them</p>
-          <img src="images/sotzlogo.jpg" class="img-responsive" alt="photo of logo" style="max-height: 200px; max-width: 200px; text-align: center">
+          <img src="images/sotz-logo-website.png" class="img-responsive" alt="photo of logo" style="max-height: 200px; max-width: 200px; text-align: center">
           <br>
         </div>
         <div class="col-md-3 col-xs-12">
