--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     
     <div class="row">
       <div class="col-md-6 col-xs-12 text-center">
-        <img class="text-center img-responsive" src="images/sotz-logo-website.jpg" alt="Photo of SOTZ logo">
+        <img class="text-center img-responsive" src="images/sotz-logo-website.png" alt="Photo of SOTZ logo">
       </div>
       <div class="col-md-6 col-xs-12">
         <h3 class="text-center">While You're Here:</h3>
