updated nav logo

--- a/navigation.html
+++ b/navigation.html
@@ -14,7 +14,7 @@
         </button>
 
         <a class="navbar-brand" href="index.html">
-          <img src="images/sotz-logo-website.png" class="img-responsive" alt="photo of logo" style="max-height: 30px; max-width: 100px; text-align: center">
+          <img src="images/sotz-logo-website.jpg" class="img-responsive" alt="photo of logo" style="max-height: 30px; max-width: 100px; text-align: center">
         </a>
       </div>
 
