--- a/100alternatives.html
+++ b/100alternatives.html
@@ -77,13 +77,26 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">5. Coming soon!</h3>
-        <p>Check back in early February</p>
+        <h3 style="font-weight: bold">5. Call it the Mario M. Cuomo Tappan Zee Bridge</h3>
+        <p>If the Cuomo name must be a part of the bridge, at least don't destroy the memorial to the original men and women of honor: the Tappan and the Dutch.</p>
+        <h4>Mr. Cuomo, as someone who is proud that we are a nation of immigrants, isn't the history of our immigrants something you want to protect?</h4>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">6. Build a monument to Mario M. Cuomo using Andrew Cuomo's own money.</h3>
+        <p>Why should the taxpayer be forced to memorialize a politician?</p>
+        <h4>Mr. Cuomo, it is in extremely poor taste to use our money to honor your dad, a politician.  It doesn't matter if he is a Republican or a Democrat, we don't want our tax money used to honor ANY politician.  Not cool.</h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">7. Coming soon!</h3>
+        <p>Check back soon.</p>
         <h4>Mr. Cuomo, we have many more reasonable and logical alternatives to present to you.  Check back soon for more ideas!</h4>
       </div>
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">6. Coming soon!</h3>
-        <p>Check back in early February</p>
+        <h3 style="font-weight: bold">8. Coming soon!</h3>
+        <p>Check back soon.</p>
         <h4>Mr. Cuomo, we have many more reasonable and logical alternatives to present to you.  Check back soon for more ideas!</h4>
       </div>
     </div>
