--- a/100reasons.html
+++ b/100reasons.html
@@ -80,12 +80,25 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">5. Coming Soon!  Check back in February!</h3>
+        <h3 style="font-weight: bold">5. Tax payer money should not be used for political purposes.</h3>
+        <p>The governor says the renaming was to honor his dad.  Hmmm....</p>
+        <h4>Andrew Cuomo, if that's the case, fine, but how about trying to honor your dad without destroying the history that is already there?  Is that asking too much?</h4>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">6. History matters.</h3>
+        <p>Does history truly matter to the govenor?</p>
+        <h4>If so, then why don't you, Mr. Cuomo, please put your actions where your mouth is.  There is ZERO justification for ditching the Tappan Zee name.  Please, we implore you, listen to what your constituents want and bring it back.</h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">7. Coming Soon!  Check back again!</h3>
         <p></p>
         <h4></h4>
       </div>
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">6. Coming Soon!  Check back in February!</h3>
+        <h3 style="font-weight: bold">8. Coming Soon!  Check back again!</h3>
         <p></p>
         <h4></h4>
       </div>
