--- a/board.html
+++ b/board.html
@@ -81,12 +81,8 @@
             </p>
           </div>
         </div>
-
-        <hr />
-
-        <h1>Advisory Committee</h1>
         
-        <h4><strong>Clifton Cloud - Committee Member</strong></h4>
+        <h4><strong>Clifton Cloud - Board Member</strong></h4>
         <div class="row">
           <h4></h4>
           <div class="col-xs-12 col-md-3">
