Made major updates

--- a/100reasons.html
+++ b/100reasons.html
@@ -93,12 +93,25 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">7. Coming Soon!  Check back again!</h3>
+        <h3 style="font-weight: bold">7. Mario Cuomo was an immigrant and wanted to protect immigrants.</h3>
+        <p>Aren't the Tappan Indians and the Dutch too 'immigrants'?</p>
+        <h4>Heck, the native Tappan are more than immigrants.  They are the true native people of this land.  Mario would NOT want to see their history destroyed.</h4>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">8. We are not losers.</h3>
+        <p>According to the biography, "Mario Cuomo":</p>
+        <h4>"Cuomo continued with phrase upon devastating phrase, pleading with the American people to see the poor and disenfranchises not as failures and losers, but fellow citizens".  -- Hey Andrew, are we just failures and losers in your eyes because we think the history of the Tappan and Dutch is important?  No: WE ARE FELLOW CITIZENS!</h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">9. Coming Soon!  Check back again!</h3>
         <p></p>
         <h4></h4>
       </div>
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">8. Coming Soon!  Check back again!</h3>
+        <h3 style="font-weight: bold">10. Coming Soon!  Check back again!</h3>
         <p></p>
         <h4></h4>
       </div>
