--- a/navigation.html
+++ b/navigation.html
@@ -21,23 +21,21 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li><a style="font-weight: bold; color: red" href="contribute.html"><strong>Fund the Fight!</strong></a></li>
+          <li><a style="font-weight: bold; color: red" href="donate.html"><strong>Fund the Fight!</strong></a></li>
         </ul>
         
 
         <ul class="nav navbar-nav navbar-right">
                     
           <li><a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign Petition</a></li>
+          <li><a href="helpout.html">Help Out</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="media.html">Media</a></li>
           <li><a href="100reasons.html">100 Rs</a></li>
           <li><a href="100alternatives.html">100 As</a></li>
           <li><a href="store.html">Buy TZ Stuff</a></li>
-          <li><a href="volunteer.html">Enlist</a></li>
-          <li><a href="board.html">Board</a></li>
-          <li><a href="staff.html">Staff</a></li>          
-          <li><a href="friends.html">Friends</a></li>
-          <li style="font-weight: bold"><a href="contribute.html">Contribute!</a></li>
+          <li><a href="team.html">Management</a></li>
+          <li style="font-weight: bold"><a href="donate.html">Donate!</a></li>
           </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
