--- a/store.html
+++ b/store.html
@@ -48,20 +48,20 @@
         
         <br><br>
         <h2 class="big-text">Buy A SOTZ Box! SOTZ = Save. Our. Tappan. Zee!</h2>
-        <p>The Small SOTZ Box includes: 2 car magnets, 4 bumper stickers, 5 pens, and 1 hand sanitzer that you can use to spread the word.</p>
-        <p>The Medium SOTZ Box includes: 4 car magnets, 6 bumper stickers, 10 pens, 2 hand sanitizers, 1 small poster, and 1 lawn sign that you can use to spread the word.</p>
-        <p>The Large SOTZ Box includes: 6 car magnets, 8 bumper stickers, 15 pens, 4 hand sanitizers, 2 lawn signs, 1 small poster, and 1 large poster.  In other words, a whole bunch of cool stuff in large quantities than the smaller boxes, so you can REALLY spread the word.</p>
-        <p>LEGAL NOTE: Prices above and contents may change sporadically.  Please give us 1 - 2 weeks for shipments.  Sometimes we run out of stock.  If we believe the wait time will be too great, based on current inventory, in such a situation we reserve the right to provide items to you of equal or greater value.  As of 2/9/18, we are still in process of ordering the posters, and the lawn signs are still en route.  Finally, don't be surprised: the box is actually an envelope, since it's less expensive. :D</p>        
+        <p>The Small SOTZ Box includes: 2 car magnets, 4 bumper stickers, 5 pens, 1 hand sanitizer, and 10 cards that you can use to spread the word.</p>
+        <p>The Medium SOTZ Box includes: 4 car magnets, 6 bumper stickers, 10 pens, 2 hand sanitizers, 1 poster, 1 lawn sign, and 20 cards that you can use to spread the word.</p>
+        <p>The Large SOTZ Box includes: 6 car magnets, 8 bumper stickers, 15 pens, 4 hand sanitizers, 2 lawn signs, 2 posters, and 50 cards that you can use to spread the word.  In other words, a whole bunch of cool stuff in large quantities than the smaller boxes, so you can REALLY get the word out.</p>
+        <p>LEGAL NOTE: Prices above and contents may change sporadically.  Please give us 2 - 3 weeks for shipments.  Sometimes we run out of stock.  If we believe the wait time will be too great, based on current inventory, in such a situation we reserve the right to provide items to you of equal or greater value.  Finally, don't be surprised: the box is actually an envelope, and larger boxes may come in multiple shipments. :D</p>        
         
-        <div class="text-center">
+        <div>
           <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="ENFCGBUZCXT96">
             <table>
             <tr><td><input type="hidden" name="on0" value="Choose Size!">Choose Size!</td></tr><tr><td><select name="os0">
-              <option value="Large SOTZ Box">Large SOTZ Box $125.00 USD</option>
-              <option value="Medium SOTZ Box">Medium SOTZ Box $80.00 USD</option>
-              <option value="Small SOTZ Box">Small SOTZ Box $35.00 USD</option>
+              <option value="Large SOTZ Box">Large SOTZ Box $145.00 USD</option>
+              <option value="Medium SOTZ Box">Medium SOTZ Box $85.00 USD</option>
+              <option value="Small SOTZ Box">Small SOTZ Box $40.00 USD</option>
             </select> </td></tr>
             </table>
             <input type="hidden" name="currency_code" value="USD">
@@ -74,6 +74,45 @@
 
   
     <h2 class="big-text">What The Stuff Looks Like! Buy Individual Items!</h2>
+      <div class="row">
+        <div class="col-md-6 col-xs-12">
+          <p>Full-Color Business-Sized Cards (Front)</p>
+          <img src="images/SOTZFrontHand.jpeg" class="img-responsive" alt="photo of front of card" style="max-height: 450px; max-width: 450px; text-align: center">
+          <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="YXSHGL9J8QGXC">
+            <table>
+            <tr><td><input type="hidden" name="on0" value="Choose Quantity">Choose Quantity</td></tr><tr><td><select name="os0">
+              <option value="100 Cards">100 Front/Back Cards $10.00 USD</option>
+              <option value="200 Cards">200 Cards $18.00 USD</option>
+              <option value="300 Cards">300 Cards $26.00 USD</option>
+            </select> </td></tr>
+            </table>
+            <input type="hidden" name="currency_code" value="USD">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+          </form>
+        </div>
+        <div class="col-md-6 col-xs-12">
+          <p>Full-Color Business-Sized Cards (Back)</p>
+          <img src="images/SOTZBackHand.jpeg" class="img-responsive" alt="photo of back of card" style="max-height: 450px; max-width: 450px; text-align: center">
+          <form target="paypal" action="https://www.paypal.com/cgi-bin/webscr" method="post">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="YXSHGL9J8QGXC">
+            <table>
+            <tr><td><input type="hidden" name="on0" value="Choose Quantity">Choose Quantity</td></tr><tr><td><select name="os0">
+              <option value="100 Cards">100 Front/Back Cards $10.00 USD</option>
+              <option value="200 Cards">200 Cards $18.00 USD</option>
+              <option value="300 Cards">300 Cards $26.00 USD</option>
+            </select> </td></tr>
+            </table>
+            <input type="hidden" name="currency_code" value="USD">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_cart_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+          </form>
+        </div>
+      </div>
+      <br><br>
       <div class="row">
         <div class="col-md-3 col-xs-12">
           <p>Medium-Sized Poster</p>
