--- a/100alternatives.html
+++ b/100alternatives.html
@@ -90,12 +90,25 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">7. Coming soon!</h3>
+        <h3 style="font-weight: bold">7. Let the people of Westchester and Rockland decide.</h3>
+        <p>How? Through referndum.</p>
+        <h4>Mr. Cuomo, if you're so confident that this is what the people would want, let us actually make the decision, instead of you making the decision for us?  Put the matter on the ballet as a referendum, and we will stand by whatever the people decide.</h4>
+      </div>
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">8. Heck, let the people of New York State decide.</h3>
+        <p>We'll even let people in NYC and Buffalo and Albany vote.</p>
+        <h4>How about it Mr. Cuomo?  Let's have a statewide referendum to see if everyone agrees that you did the right thing.  Here's a hint: they don't.</h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <h3 style="font-weight: bold">9. Coming soon!</h3>
         <p>Check back soon.</p>
         <h4>Mr. Cuomo, we have many more reasonable and logical alternatives to present to you.  Check back soon for more ideas!</h4>
       </div>
       <div class="col-xs-12 col-md-6">
-        <h3 style="font-weight: bold">8. Coming soon!</h3>
+        <h3 style="font-weight: bold">10. Coming soon!</h3>
         <p>Check back soon.</p>
         <h4>Mr. Cuomo, we have many more reasonable and logical alternatives to present to you.  Check back soon for more ideas!</h4>
       </div>
