--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-4">
         <h4 class="text-center">SIGNATURE COUNT:
-          <p style="color: red">106,579 Supporters since 11/3/17<br>
+          <p style="color: red">108,000 Supporters since 11/3/17<br>
             <span style="color: black">who want their bridge back</span>
           </p>
         </h4>
@@ -56,7 +56,7 @@
 
       <div class="col-xs-12 col-md-4">
         <h4 class="text-center">GOFUNDME.COM:   
-          <p style="color: red">$9,838 of $100,000 since 12/2/17<br>
+          <p style="color: red">$10,200 of $100,000 since 12/2/17<br>
             <span style="color: black">from 341 Friends of the Tappan Zee</span>
           </p> 
         </h4>
@@ -73,25 +73,34 @@
     </div>
 
     <br><br>
+
+    <div class="row">
+      <div class="col-md-6 col-xs-12 text-center">
+      </div>
+      <div class="col-md-6 col-xs-12 text-center">
+      </div>
+    </div>
     
     <div class="row">
       <div class="col-md-6 col-xs-12 text-center">
         <img class="text-center img-responsive" src="images/sotz-logo-website.png" alt="Photo of SOTZ logo">
+        <p align="justify">4/22/18 - Thanks to our efforts, there is currently a bill pending in the New York State Senate to add the Tappan Zee name back to the bridge.  It would be a compromise: The Governor Mario M. Cuomo Tappan Zee Bridge.  Why support this?  It has a decent chance of passing; it adds the Tappan Zee name back; and it avoids renaming the signs.  If you support this bill, please download</p>
       </div>
       <div class="col-md-6 col-xs-12">
         <h3 class="text-center">While You're Here:</h3>
         <p class="text-center main-links">1. <a href="https://www.change.org/p/the-ny-state-legislature-return-the-tappan-zee-name-to-those-who-rightfully-deserve-it-the-indians-and-dutch" target="_blank">Sign the petition!</a></p>
-        <p class="text-center main-links">2. <a href="contribute.html">Donate!</a> or <a href="/store">Buy SOTZ Stuff!</a></p>
-        <p class="text-center main-links">3. <a href="http://eepurl.com/diOTQ5" target="_blank">Join our email list. Stay informed.</a></p>
-        <p class="text-center main-links">4. <a href="https://join.slack.com/t/saveourtappanzee/shared_invite/enQtMzE0Nzk4OTY0NzIwLTk1MjUxMDg0MmRjNWRmYzk3M2ZjOTExNzgyOGI2Yjg3OGIxZGI1ZTc1MjNiMTdhODVkNmE0NzNjNDBjYmU4OTk">Join our FREE online community!</a></p>
-        <p class="text-center main-links">5. <a href="https://twitter.com/SaveOurTappanZ" target="_blank">Follow us on Twitter!</a></p>
-        <p class="text-center main-links">6. <a href="https://www.facebook.com/SaveOurTappanZ/" target="_blank">Join our Facebook group!</a></p>
+        <p class="text-center main-links">3. <a href="helpout.html">Download &amp; Fight!</a>
+        <p class="text-center main-links">2. <a href="http://events.eventzilla.net/e/save-our-tappan-zee--live-protest-event-2138933813?resp=on&dateid=2138805633">Join a Protest!</a>        
+        <p class="text-center main-links">4. <a href="donate.html">Donate!</a>
+        <p class="text-center main-links">5. <a href="http://eepurl.com/diOTQ5" target="_blank">Join our email list. Stay informed.</a></p>
+        <p class="text-center main-links">6. <a href="https://twitter.com/SaveOurTappanZ" target="_blank">Follow us on Twitter!</a></p>
+        <p class="text-center main-links">7. <a href="https://www.facebook.com/SaveOurTappanZ/" target="_blank">Join our Facebook group!</a></p>
       </div>
     </div>
     <br>
     <div>
-     <p>What started as a single signature by a guy watching tv has turned into a petition with over 106,000 signatures, and the creation of this apolitical not-for-profit advocacy organization with one primary mission: to return the Tappan Zee name to our bridge. <a href="about.html">Learn more about us.</a></p>
-     <p>Save Our Tappan Zee, Inc. is a NY not-for-profit corporation, with tax-exempt paperwork submitted to the IRS on 1/8/2018.</p>
+     <p>What started as a single signature by a guy watching tv has turned into a petition with over 106,000 signatures, and the creation of this apolitical not-for-profit advocacy organization with one primary mission: to return the Tappan Zee name to our bridge crossing the Hudson between Westchester &amp; Rockland counties, NY. <a href="about.html">Learn more about us.</a></p>
+     <p>Save Our Tappan Zee, Inc. is a NY not-for-profit corporation, 501(c)(3) PENDING (tax-exempt paperwork submitted to the IRS on 1/8/2018.)</p>
     </div>
   </div>
 
